--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .DS_Store
 HelloWorld.xcodeproj/project.xcworkspace/xcuserdata/simonbruechner.xcuserdatad/UserInterfaceState.xcuserstate
+Clipboard.xcodeproj/project.xcworkspace/xcuserdata/simonbruechner.xcuserdatad/UserInterfaceState.xcuserstate
